exercises/Ingress/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: webapp.com
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: bluesvc
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: greensvc
            port:
              number: 80
